[MODINVOICE-302] - Improve backend error reporting by including cause in error message systematically